# XEFI

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: docs.yml  linting.yml  pyinst.yml  release.yml  semver.yml  test.yml  tests.yml
XEFI/: __init__.py  __main__.py  fitting.py  results.py  utils.py
XEFI/models/: __init__.py  basic.py  results.py  sliced.py
XEFI/tests/: test_basic.py  test_sliced.py
docs/: CHANGELOG.rst  conf.py  geometry.pdn  index.rst
docs/source/: api.rst  contributing.rst  install.rst
docs/source/_static/graphics/: geometry.pdn
docs/source/tutorials/: index.rst  quickstart.rst  theory.rst
docs/source/tutorials/advanced/: algorithms.rst  energy.rst  fitting.rst  kkcalc2.rst
docs/source/tutorials/xef/: basic.rst  sliced.rst
examples/: 01 Generating an XEFI Map.ipynb  02 Generating a resonant XEFI Map.ipynb  03 Generating a Sliced XEFI Map.ipynb  04 Summed Intensity.ipynb  XEFI_basic.ipynb
examples/Literature Reproduction/: 01 Dev.ipynb  01 Reproducing the Dev Result.ipynb  02 Reproducing the Toland Result.ipynb  02 Toland.ipynb
tests/: materials.py  test_basic.py  test_equivalence.py  test_kkcalc.py  test_sliced.py
