[build-system]
    requires = [
        "setuptools>=60",
        "setuptools-scm>=8.0",
        "pip >= 25.1", # Supports group dependency installs.
    ]
    build-backend = "setuptools.build_meta"


[project]
    # Project information
    name = "XEFI"
    version = "0.0.0"
    description = "Calculations for X-ray Electric Field Intensities using the Parratt recursive algorithm."
    readme = "README.md"
    license = {file = "LICENSE"}
    keywords = ["X-ray", "Waveguiding", "Parratt", "Electric", "XEFI", "Intensity", "Field", "Intensity"]
    authors = [
        {name = "Matthew Gebert", email="matthew.gebert@monash.edu"},
        ]
    maintainers = [
        {name = "Matthew Gebert", email="matthew.gebert@monash.edu"},
    ]

    # Project compatibility:
    requires-python = ">=3.10"
    dependencies = [
        "numpy",
        "scipy",
        "matplotlib",
    ]

[dependency-groups]
dev = [
    {include-group = "docs"}, # Include documentation dependencies in dev
    "pre-commit",
    "pytest",
    "python-semantic-release",
    "commitizen",
    "commitlint",
    "black",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc",
]


[tool.numpydoc_validation]
    checks = [
        "all",   # report on all checks, except the below
        "EX01",
        "SA01",
        "ES01",
        "GL08", # TODO: ignore docstring check until numpydoc 1.9.0 is released (where constructors are supported).
        "PR02", # TODO: ignore parameter check until numpydoc 1.9.0 is released (where properties setter methods are supported).
    ]

    exclude = [
        'tests*',
    ]

    override_SS05 = [
        "^Process",
        "",
    ]
